[package]
name = "zengin"
version = "1.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
edition = "2021"
description = "Rust implementation of zengin code"
repository = "https://github.com/kumanote/zengin-rs"
readme = "README.md"
keywords = ["zengin code", "jp"]
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# glob = "0.3.0"
