[package]
name = "zengin"
version = "1.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
edition = "2021"
description = "Rust implementation of zengin code"
repository = "https://github.com/kumanote/zengin-rs"
readme = "README.md"
keywords = ["zengin code", "jp"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.10.0"
futures = "0.3"

[dev-dependencies]
serial_test = "0.6.0"
tokio = { version = "1", features = ["full"] }
